2010-12-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (MogrifyImages): Should send -verbose output to
	stderr rather than stdout since otherwise usage in pipelines may
	be broken.  Resolves SourceForge issue 3131790 "AVS -verbose
	prints to stdout".

2010-11-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* libtool: Upgrade to libtool 2.4.

	* coders/pnm.c (ReadPNMImage): Start work on reading NetPBM PAM
	format.  Parses PAM header but pixels are not returned yet.

	* magick/magic.c (StaticMagic): Be more specific when identifying
	PNM subformats.  Return the specific subformat name PBM, PGM, or
	PPM rather than PNM.  XV P7 format is now identified as "P7 332".
	Add detection of NetPBM PAM format.

2010-11-04  Glenn Randers-Pehrson  <glennrp@simple...>

	* magick/effect.c: Added 5x5, 6x6, and 7x7 circular ordered dither
	  patterns to create a halftone effect.

2010-09-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* doc/options.imdoc: Document pcl:fit-to-page define.

	* coders/pcl.c: Fix issue with printing a bi-level image on
	Konica-Minolta printers.  Define pcl:fit-to-page in order for the
	printer to scale the image to fit the page.  Patch by John
	Sergeant.

2010-09-19  Glenn Randers-Pehrson  <glennrp@simple...>

	* coders/png.c: removed an apparently harmless extra invocation
	of ScaleShortToQuantum() due to cut-and-paste error in the
	update of 2010-06-02.  Also added a line to explicitly set
	the opacity of the background_color to OpaqueOpacity.

2010-09-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pdf.c (ReadPDFImage): Enable use of PDF crop box via
	-define pdf:use-cropbox=true. Patch contributed by Chris Gilling.
	SourceForge patch ID 3063794, "Add support for using crop box for
	pdf import".

2010-09-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Magick++/lib/Image.cpp (backgroundColor, borderColor, matteColor):
	Opacity part of user-specified color needs to be preserved.