@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020101207"
+#define public MagickPackageVersionAddendum ".020101218"
 #define public MagickPackageReleaseDate "unreleased"
