@@ -472,6 +472,9 @@
 /* Define if using libltdl to support dynamically loadable modules */
 #undef HasLTDL
 
+/* Define if you have lzma compression library */
+#undef HasLZMA
+
 /* Define if you have PNG library */
 #undef HasPNG
 
