@@ -21,6 +21,13 @@
 </tr>
 </table>
 <p>
+2010-12-18  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/tiff.c (WriteTIFFImage): Add TIFF LZMA compressor support.
+
+</UL>
+<p>
 2010-12-07  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
